--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://IIShara.github.io/movies-progect",
+  "homepage": "https://iishara.github.io/movies-progect",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
